<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/purple_200"
        android:gravity="top"
        android:theme="@style/Theme.MyApplication.AppBarOverlay"
        app:popupTheme="@style/Theme.MyApplication.AppBarOverlay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Quiz"
            android:textColor="#311B92"
            android:textSize="25dp"
            tools:ignore="SpUsage"
            android:theme="@style/Theme.MyApplication.AppBarOverlay">

        </TextView>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MyApplication.AppBarOverlay">
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp">

    </TextView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:theme="@style/Theme.MyApplication.AppBarOverlay">

        <Button
            android:id="@+id/button_true"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/beige"
            android:text="@string/button_true"
            android:textColor="#7C4DFF">

        </Button>

        <Button
            android:id="@+id/button_false"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/beige"
            android:text="@string/button_false"
            android:textColor="#7C4DFF">

        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:text="@string/button_next"
        android:textColor="#311B92">

    </Button>

    <Button
        android:id="@+id/podpowiedz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:text="@string/podpowiedz_button"
        android:textColor="#311B92"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="314dp"
        >
    </Button>

</LinearLayout>